sumo/tests/duarouter/flows/errors/vehicle_empty_arrivallane/errors.duarouter
Error: Attribute 'arrivalLane' in definition of a flow is empty.
Error: Invalid arrivalLane definition for vehicle 0;
 must be one of ("current", or int>0)
Quitting (on error).
